--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,59 @@
         <title>Document</title>
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
+
     <body>
+        <header class="header">
+            <div class="container">
+                <div class="header__top">
+                    <div class="logo">
+                        <a class="header__link" href="#">
+                            <picture>
+                                <source
+                                    type="image/webp"
+                                    srcset="images/logo.webp"
+                                />
+                                <source
+                                    type="image/png"
+                                    srcset="images/logo.png"
+                                />
+                                <img src="images/logo.png" alt="logo" />
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="header__btn">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </div>
+                </div>
+                <div class="header__content">
+                    <h1 class="header__content-title">Roadster</h1>
+                    <p class="header__content-text">
+                        Самый быстрый автомобиль в мире, с рекордным ускорением,
+                        дальностью и производительностью.
+                    </p>
+                    <a class="header__content-link" href="#">Хочу тест драйв</a>
+                </div>
+            </div>
+        </header>
+        <section class="slider__top">
+            <div class="slider">
+                <div
+                    class="slider__item"
+                    style="background-image: url('images/slider/slider-1.jpg')"
+                ></div>
+                <div
+                    class="slider__item"
+                    style="background-image: url('images/slider/slider-2.jpg')"
+                ></div>
+                <div
+                    class="slider__item"
+                    style="background-image: url('images/slider/slider-3.jpg')"
+                ></div>
+            </div>
+        </section>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
         <script src="js/main.min.js"></script>
