--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,11 @@
                 <div class="logo">
                     <a class="header__link" href="#">
                         <picture>
+                            <source media="(max-width: 420px)" type="image/webp" srcset="images/logo-a.webp">
+                            <source media="(max-width: 420px)" type="image/png" srcset="images/logo-a.png">
                             <source type="image/webp" srcset="images/logo.webp" />
                             <source type="image/png" srcset="images/logo.png" />
+
                             <img src="images/logo.png" alt="logo" />
                         </picture>
                     </a>
@@ -28,44 +31,157 @@
                 </div>
             </div>
             <div class="header__content">
-                <h1 class="header__content-title">Roadster</h1>
+                <h1 class="header__content-title">AMG GT 63 S</h1>
                 <p class="header__content-text">
-                    Самый быстрый автомобиль в мире, с рекордным ускорением,
-                    дальностью и производительностью.
+                    Самый быстрый автомобиль в мире, с рекордным ускорением и производительностью.
                 </p>
-                <a class="header__content-link" href="#">Хочу тест драйв</a>
+                <a class="content-link" href="#">Хочу тест драйв</a>
             </div>
         </div>
+        <nav class="menu">
+            <div class="container container__menu">
+                <div class="menu__list">
+                    <ul>
+                        <li><a class="menu__list-link" href="#">Узнать цену</a></li>
+                        <li><a class="menu__list-link" href="#">Характеристики</a></li>
+                        <li><a class="menu__list-link" href="#">Тест Драйв</a></li>
+                        <li><a class="menu__list-link" href="#">Новости</a></li>
+                        <li><a class="menu__list-link" href="#">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
+
     <section class="slider__top">
         <div class="slider">
-            <div class="slider__item" style="background-image: url('images/slider/slider-1.jpg')"></div>
-            <div class="slider__item" style="background-image: url('images/slider/slider-2.jpg')"></div>
-            <div class="slider__item" style="background-image: url('images/slider/slider-3.jpg')"></div>
+            <div class="slider__item slider__item-1 " style="background-image: url('images/slider/slider-1.jpg')"></div>
+            <div class="slider__item slider__item-2 " style="background-image: url('images/slider/slider-2.jpg')"></div>
+            <div class="slider__item slider__item-3 " style="background-image: url('images/slider/slider-3.jpg')"></div>
         </div>
     </section>
 
     <section class="specification">
         <div class="container">
-            <div class="specification__innerr">
+            <div class="specification__inner">
+                <div class="specification__item">
+                    <h3 class="specification__item-title">Разгон</h3>
+                    <div class="specification__item-num"><span>3.2</span></div>
+                    <div class="specification__item-descr">до 100 км/ч</div>
+                </div>
                 <div class="specification__item">
                     <h3 class="specification__item-title">Двигатель</h3>
-                    <div class="specification__item-num"><span>2,1</span> сек</div>
-                    <div class="specification__item-descr">разгон до 100 км</div>
+                    <div class="specification__item-num"><span>640</span></div>
+                    <div class="specification__item-descr">Лошадиных сил</div>
                 </div>
                 <div class="specification__item">
-                    <h3 class="specification__item-title">Батарея</h3>
-                    <div class="specification__item-num"><span>1000</span> км</div>
-                    <div class="specification__item-descr">запас хода</div>
-                </div>
-                <div class="specification__item">
-                    <h3 class="specification__item-title">Скорость</h3>
-                    <div class="specification__item-num"><span>400</span> км/ч</div>
-                    <div class="specification__item-descr">макс скорость</div>
+                    <h3 class="specification__item-title">Макс. скорость</h3>
+                    <div class="specification__item-num"><span>315</span></div>
+                    <div class="specification__item-descr">км / ч</div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="presentation">
+        <div class="container">
+            <div class="presentation__images">
+                <img class="presentation__images-img" src="images/specification.jpg" alt="car">
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+
+            <div class="about__item">
+                <div class="about__content">
+                    <div class="about__content-title">Скорость</div>
+                    <div class="about__content-descr">
+                        Самый
+                        быстроразгоняющийся
+                        серийный автомобиль
+                        из когда-либо созданных
+                    </div>
+                </div>
+                <div class="about__images">
+                    <picture>
+                        <source srcset="images/speed.webp" type="image/webp">
+                        <source srcset="images/speed.jpg" type="image/jpeg">
+                        <img class="about__images-img" src="images/speed.jpg" alt="car">
+                    </picture>
+                </div>
+            </div>
+
+            <div class="about__item about__item--mobile">
+                <div class="about__images">
+                    <img class="about__images-img" src="images/benefits.jpg " alt="car">
+                </div>
+                <div class="about__content about__content--mobile">
+                    <div class="about__content-descr">
+                        Датчик дождя <br>
+                        Датчик света<br>
+                        Автопилот<br>
+                        Навигационная система<br>
+                        Обогрев зеркал<br>
+                        Усилитель руля<br>
+                        Панорамная крыша<br>
+                        Ксеноновые фары<br>
+                    </div>
+                    <div class="about__content-title">Преимущества</div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="design">
+        <div class="container">
+            <div class="design__images">
+                <img class="design__images-img" src="images/about.jpg" alt="">
+            </div>
+            <div class="design__content">
+
+                <div class="design__item">
+                    <div class="design__item-num">01</div>
+                    <div class="design__item-descr">
+                        Салон MB AMG обшит кожей с прострочкой, от двух дверного GT авто отличает наличие внутри двух
+                        сдвоенных мультимедийных экранов (у двух местной версии 1 экран и панель приборов).
+                    </div>
+                </div>
+
+                <div class="design__item">
+                    <div class="design__item-num">02</div>
+                    <div class="design__item-descr">
+                        На центральной консоли под рукой водителя Мерседес амг расположен джойстик коробки автомат,
+                        тачпад для управления всей электроникой, информацию о состоянии которой можно вывести на большой
+                        экран.
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__btn">
+                <a class="content-link" href="#">Хочу тест драйв</a>
+            </div>
+            <div class="footer__copy">
+                <ul>
+                    <li><a href="#">Tesla © 2020</a></li>
+                    <li><a href="#">Privacy & Legal</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Get Newsletter</a></li>
+                    <li><a href="#">Forums</a></li>
+                    <li><a href="#">Locations</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="js/main.min.js"></script>
